--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,10 @@ p {
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+    text-decoration: none;
 }
 
-.attribution a:hover a:focus { 
+.attribution a:hover, a:focus { 
     background-color: hsl(228, 45%, 44%); 
     color: hsl(228, 45%, 90%);
 }
